cc-figure/css/grau.css
[itemscope],
[about] {
    border: 1px solid #888a85;
    background: #eeeeec;
    padding: 11px;
}

[itemscope],
[itemscope] dd,
[itemscope] dt,
[about],
[about] dd,
[about] dt {
    display: block;
    margin: 0;
}

[itemscope] [itemprop=work],
[about] dd * {
    border: 1px solid #888A85;
    display: block;
    margin: auto auto 0.5em;
}

[itemscope] dt,
[about] dt {
    text-align: center;
}

